# morning-meh

./: LICENSE.md  Pipfile  README.md  pyproject.toml
meh_txt/: __main__.py  notifiers.py  scraper.py
tests/data/: features.html
